# diffusion-policy

./: .gitignore  README.md  eval_pusht.py  pyproject.toml  train.py
diffusion-policy/data/: pusht_zarr_dataset.py
diffusion_policy/: checkpoint.py  normalizer.py
diffusion_policy/data/: pusht_zarr_dataset.py  sequence_utils.py
diffusion_policy/models/: denoisers.py  diffusion.py  encoders.py  nn_utils.py
scripts/: inspect_zarr.py  smoke_test_dataset.py  smoke_test_model.py
