[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "diffusion-policy-min"
version = "0.1.0"
description = "Minimal Diffusion Policy implementation for PushT"
readme = "README.md"
authors = [{ name = "mrtanke" }]
requires-python = ">=3.9"
dependencies = [
    "torch",
    "diffusers",
    "accelerate",
    "ema-pytorch",
    "gymnasium",
    "numpy",
    "zarr",
]

[tool.setuptools.packages.find]
include = ["diffusion_policy*"]
